@startuml
'https://plantuml.com/class-diagram
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:double
    # speedY:double
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, double speedX, double speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + getLocationX():int
    + getLocationY():int
    + setLocation(double locationX, double locationY):void
    + getSpeedY():double
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, double speedX, double speedY, int power)
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- BaseBullet

class HeroBullet {
    + HeroBullet(int locationX, int locationY, double speedX, double speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, double speedX, double speedY, int power)
    + update():void
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

@enduml